--- a/main.html
+++ b/main.html
@@ -1,15 +1,133 @@
 <!DOCTYPE html>
-<html lang="my">
+<html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Smart Burme AI Video Generator</title>
+  <meta charset="UTF-8">
+  <title>Smart Burme</title>
+  <style>
+    body {
+      background-color: #000;
+      color: #fff;
+      font-family: Arial, sans-serif;
+      text-align: center;
+      padding: 20px;
+    }
 
-  <!-- Firebase SDK -->
-  <script src="https://www.gstatic.com/firebasejs/9.7.0/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.7.0/firebase-auth.js"></script>
+    .container {
+      max-width: 600px;
+      margin: auto;
+      background-color: #111;
+      padding: 20px;
+      border-radius: 10px;
+    }
+
+    input, textarea, button {
+      width: 90%;
+      margin: 10px auto;
+      padding: 12px;
+      border-radius: 8px;
+      border: none;
+      font-size: 16px;
+    }
+
+    button {
+      background-color: #00bfff;
+      color: white;
+      cursor: pointer;
+    }
+
+    #videoArea {
+      margin-top: 20px;
+    }
+
+    footer {
+      margin-top: 40px;
+      color: #ccc;
+    }
+  </style>
+</head>
+<body>
+  <h1>Smart Burme</h1>
+  <div class="container">
+    <input type="file" id="uploadImage" accept="image/*" />
+    <textarea id="promptText" placeholder="Enter your prompt...">Space Station in space</textarea>
+    <button onclick="generateVideo()">Generate</button>
+
+    <div id="videoArea"></div>
+  </div>
+
+  <footer>
+    <p>Deploy by Aung Myo Kyaw</p>
+    <p><a href="https://www.tiktok.com" target="_blank" style="color:#00bfff;">TikTok</a></p>
+  </footer>
 
   <script>
+    const apiKey = "sDDYd3VavSHfaW63nsK5kiLiCGvUpBMwBJv6TTOrP6wzl4HbRBtjebc9xCsB";
+
+    function generateVideo() {
+      const prompt = document.getElementById("promptText").value;
+      const upload = document.getElementById("uploadImage").files[0];
+
+      if (!upload) {
+        alert("Please upload an image.");
+        return;
+      }
+
+      const reader = new FileReader();
+      reader.onloadend = function () {
+        const imageBase64 = reader.result;
+
+        const myHeaders = new Headers();
+        myHeaders.append("Content-Type", "application/json");
+
+        const raw = JSON.stringify({
+          key: apiKey,
+          model_id: "svd",
+          init_image: imageBase64,
+          height: 512,
+          width: 512,
+          num_frames: 25,
+          num_inference_steps: 20,
+          min_guidance_scale: 1,
+          max_guidance_scale: 3,
+          motion_bucket_id: 20,
+          noise_aug_strength: 0.02,
+          webhook: null,
+          track_id: null
+        });
+
+        const requestOptions = {
+          method: 'POST',
+          headers: myHeaders,
+          body: raw,
+          redirect: 'follow'
+        };
+
+        fetch("https://modelslab.com/api/v6/video/img2video", requestOptions)
+          .then(response => response.json())
+          .then(result => {
+            if (result.status === "success" && result.output.length > 0) {
+              document.getElementById("videoArea").innerHTML = `
+                <p>✅ Video Generated</p>
+                <img src="${result.output[0]}" width="100%" />
+              `;
+            } else {
+              document.getElementById("videoArea").innerHTML = "❌ Failed to generate video.";
+            }
+          })
+          .catch(error => {
+            console.error(error);
+            document.getElementById("videoArea").innerHTML = "❌ Error occurred.";
+          });
+      };
+
+      reader.readAsDataURL(upload);
+    }
+  </script>
+
+  <!-- Firebase Config -->
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-app.js";
+
     const firebaseConfig = {
       apiKey: "AIzaSyAr7Hv2ApKtNTxF11MhT5cuWeg_Dgsh0TY",
       authDomain: "smart-burme-app.firebaseapp.com",
@@ -18,147 +136,8 @@
       messagingSenderId: "851502425686",
       appId: "1:851502425686:web:f29e0e1dfa84794b4abdf7"
     };
-    firebase.initializeApp(firebaseConfig);
+
+    const app = initializeApp(firebaseConfig);
   </script>
-
-  <style>
-    body {
-      background: linear-gradient(to bottom right, #1e3c72, #2a5298);
-      color: white;
-      font-family: Arial, sans-serif;
-      text-align: center;
-      margin: 0;
-      padding: 20px;
-    }
-
-    h1 {
-      margin-bottom: 20px;
-    }
-
-    #promptInput, #fileInput {
-      padding: 10px;
-      margin: 10px;
-      width: 80%;
-      max-width: 400px;
-      border: none;
-      border-radius: 5px;
-      font-size: 16px;
-    }
-
-    #generateButton {
-      padding: 12px 25px;
-      font-size: 16px;
-      background-color: #00c853;
-      border: none;
-      border-radius: 5px;
-      color: white;
-      cursor: pointer;
-      transition: 0.3s;
-    }
-
-    #generateButton:hover {
-      background-color: #00b44a;
-    }
-
-    #generationResult img {
-      margin-top: 20px;
-      max-width: 90%;
-      border-radius: 10px;
-      display: none;
-    }
-
-    footer {
-      margin-top: 40px;
-      font-size: 14px;
-      color: #ddd;
-    }
-
-    footer a {
-      color: #00e5ff;
-      text-decoration: none;
-    }
-  </style>
-</head>
-<body>
-
-  <h1>Smart Burme AI Video Generator</h1>
-
-  <!-- Prompt Text Input -->
-  <input type="text" id="promptInput" placeholder="Enter your prompt (e.g., Space Station in space)" />
-
-  <!-- File Upload -->
-  <input type="file" id="fileInput" accept="image/*" />
-
-  <!-- Generate Button -->
-  <br />
-  <button id="generateButton">Generate Video</button>
-
-  <!-- Video Output -->
-  <div id="generationResult">
-    <img id="videoOutput" alt="Generated Video" />
-  </div>
-
-  <!-- Footer -->
-  <footer>
-    <div>deploy by Aung Myo Kyaw</div>
-    <div><a href="https://www.tiktok.com/@yourusername" target="_blank">TikTok Profile</a></div>
-  </footer>
-
-  <script>
-    document.getElementById('generateButton').addEventListener('click', () => {
-      const promptText = document.getElementById('promptInput').value || "Space Station in space";
-      const file = document.getElementById('fileInput').files[0];
-
-      if (!file) {
-        alert("Please upload an image.");
-        return;
-      }
-
-      // Image upload simulation (example only)
-      const imageUrl = "https://imagedelivery.net/PP4qZJxMlvGLHJQBm3ErNg/e2f9cb8e-cb87-4143-dd81-a9e77e3bb800/768";
-
-      const headers = new Headers();
-      headers.append("Content-Type", "application/json");
-
-      const body = JSON.stringify({
-        "key": "sDDYd3VavSHfaW63nsK5kiLiCGvUpBMwBJv6TTOrP6wzl4HbRBtjebc9xCsB",
-        "model_id": "svd",
-        "init_image": imageUrl,
-        "height": 512,
-        "width": 512,
-        "num_frames": 25,
-        "num_inference_steps": 20,
-        "min_guidance_scale": 1,
-        "max_guidance_scale": 3,
-        "motion_bucket_id": 20,
-        "noise_aug_strength": 0.02,
-        "webhook": null,
-        "track_id": null
-      });
-
-      fetch("https://modelslab.com/api/v6/video/img2video", {
-        method: 'POST',
-        headers: headers,
-        body: body,
-        redirect: 'follow'
-      })
-      .then(response => response.json())
-      .then(result => {
-        const videoUrl = result.output?.[0];
-        if (videoUrl) {
-          const videoOutput = document.getElementById("videoOutput");
-          videoOutput.src = videoUrl;
-          videoOutput.style.display = "block";
-        } else {
-          alert("Video not generated. Please try again.");
-        }
-      })
-      .catch(error => {
-        console.error('Error:', error);
-        alert("API error.");
-      });
-    });
-  </script>
-
 </body>
 </html>
