--- a/main.html
+++ b/main.html
@@ -4,9 +4,14 @@
   <meta charset="UTF-8">
   <title>AI Chat with Gemini</title>
   <link rel="stylesheet" href="main.css">
-  <!-- External Links here -->
+  
+  <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+
+  <!-- Float animation -->
   <script src="https://cdn.jsdelivr.net/npm/vanilla-tilt@1.7.2/dist/vanilla-tilt.min.js"></script>
+
+  <!-- Gemini Client Library - MUST load BEFORE main.js -->
   <script src="https://unpkg.com/@google/generative-ai"></script>
 </head>
 <body>
@@ -20,6 +25,7 @@
     </div>
   </div>
 
+  <!-- Your app logic -->
   <script src="main.js"></script>
 </body>
 </html>
