--- a/main.html
+++ b/main.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>AI Chat with Gemini</title>
+  <title>Smart Burme ai</title>
   <link rel="stylesheet" href="main.css">
   
   <!-- Google Fonts -->
@@ -18,7 +18,7 @@
 
   <div class="container">
     <div class="chat-card" data-tilt data-tilt-scale="1.05">
-      <h1>🎓 Smart AI Chat</h1>
+      <h1>🎓 Smart Burme ai Chat</h1>
       <div id="chat-box"></div>
       <input type="text" id="user-input" placeholder="Type your message...">
       <button onclick="sendMessage()">Send</button>
