--- a/main.html
+++ b/main.html
@@ -4,16 +4,31 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Smart Burme AI</title>
+
+  <!-- Bootstrap 5 CSS CDN -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+
   <link rel="stylesheet" href="main.css" />
 </head>
-<body>
-  <div class="container">
-    <h1>🤖 Smart Burme AI</h1>
-    <textarea id="user-input" placeholder="သင့်မေးခွန်းကို ဒီမှာရေးပါ..."></textarea>
-    <button id="send-btn">မေးမယ်</button>
+<body class="bg-light">
 
-    <div id="response">AI ရဲ့ဖြေချက်တွေ ဒီမှာပြပါမယ်။</div>
+  <div class="container py-5">
+    <div class="card shadow-sm mx-auto" style="max-width: 600px;">
+      <div class="card-body">
+        <h1 class="card-title text-center mb-4">🤖 Smart Burme AI</h1>
+
+        <textarea id="user-input" class="form-control mb-3" rows="5" placeholder="သင့်မေးခွန်းကို ဒီမှာရေးပါ..."></textarea>
+        <button id="send-btn" class="btn btn-primary w-100 mb-3">မေးမယ်</button>
+
+        <div id="response" class="p-3 border rounded bg-white" style="min-height: 120px; white-space: pre-wrap; font-size: 1rem; color: #333;">
+          AI ရဲ့ဖြေချက်တွေ ဒီမှာပြပါမယ်။
+        </div>
+      </div>
+    </div>
   </div>
+
+  <!-- Bootstrap 5 JS Bundle CDN (includes Popper) -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
   <script type="module" src="main.js"></script>
 </body>
