--- a/main.html
+++ b/main.html
@@ -1,35 +1,210 @@
-<!DOCTYPE html>
-<html lang="my">
+<!DOCTYPE html><html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Smart Burme AI</title>
-
-  <!-- Bootstrap 5 CSS CDN -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
-
-  <link rel="stylesheet" href="main.css" />
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-storage-compat.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@google/generative-ai@0.3.0/dist/index.umd.js"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Inter', sans-serif;
+      background: linear-gradient(to bottom, #000000, #1a1a1a);
+      color: #fff;
+      overflow-x: hidden;
+    }
+    header {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: 1em;
+      background: #111;
+      position: sticky;
+      top: 0;
+      z-index: 999;
+      border-bottom: 1px solid #333;
+    }
+    .logo {
+      display: flex;
+      align-items: center;
+      gap: 0.5em;
+      font-size: 1.2em;
+      font-weight: bold;
+    }
+    .user-icon {
+      width: 32px;
+      height: 32px;
+      border-radius: 50%;
+      background: url('/mnt/data/file-VoSZQknts6QnkSpDt7bP7P') no-repeat center/cover;
+    }
+    .container {
+      padding: 1em;
+    }
+    h2 {
+      font-weight: 600;
+      color: #ffd700;
+    }
+    .ai-card {
+      background: #222;
+      border-radius: 12px;
+      padding: 1em;
+      margin-top: 1em;
+      box-shadow: 0 0 12px rgba(255, 215, 0, 0.1);
+    }
+    input, textarea {
+      width: 100%;
+      background: #111;
+      color: #fff;
+      border: 1px solid #444;
+      border-radius: 8px;
+      padding: 0.75em;
+      margin-top: 1em;
+      font-size: 1em;
+    }
+    button {
+      margin-top: 1em;
+      width: 100%;
+      background-color: #ffd700;
+      color: #000;
+      padding: 0.75em;
+      border: none;
+      border-radius: 8px;
+      font-weight: 600;
+      font-size: 1em;
+      cursor: pointer;
+    }
+    .chat-bubble {
+      background: #333;
+      border-radius: 16px;
+      padding: 1em;
+      margin-top: 1em;
+    }
+    .float3D {
+      position: fixed;
+      bottom: 80px;
+      right: 20px;
+      width: 60px;
+      height: 60px;
+      background: #ffd700;
+      color: #000;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      border-radius: 50%;
+      box-shadow: 0 0 25px rgba(255, 215, 0, 0.5);
+      font-size: 1.5em;
+      animation: floatPulse 2s infinite;
+      z-index: 999;
+    }
+    @keyframes floatPulse {
+      0% { transform: scale(1); }
+      50% { transform: scale(1.1); }
+      100% { transform: scale(1); }
+    }
+    .bottom-bar {
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+      background: #111;
+      border-top: 1px solid #333;
+      padding: 0.75em 0;
+      z-index: 999;
+    }
+    .bottom-bar i {
+      color: #ffd700;
+      font-size: 1.5em;
+    }
+    .drawer {
+      position: fixed;
+      top: 0;
+      left: -250px;
+      height: 100%;
+      width: 250px;
+      background: #111;
+      color: #fff;
+      padding: 1em;
+      transition: left 0.3s ease-in-out;
+      z-index: 999;
+    }
+    .drawer.open {
+      left: 0;
+    }
+    .drawer button {
+      width: 100%;
+      margin: 0.5em 0;
+    }
+  </style>
 </head>
-<body class="bg-light">
+<body>
+  <header>
+    <div class="logo" onclick="toggleDrawer()"><i class="fas fa-bars"></i> Smart Burme AI</div>
+    <div class="user-icon"></div>
+  </header>  <div class="drawer" id="drawer">
+    <h3>Menu</h3>
+    <button onclick="alert('Profile')">👤 Profile</button>
+    <button onclick="alert('Settings')">⚙️ Settings</button>
+    <button onclick="alert('Logout')">🚪 Logout</button>
+  </div>  <div class="container">
+    <h2>Welcome back!</h2>
+    <div class="ai-card">
+      <p>How can I help you today? You can ask me to generate images, analyze data, or answer your questions.</p>
+    </div><textarea id="bodyText" placeholder="Enter your AI prompt here..."></textarea>
+<button onclick="generateImage()">Generate Image</button>
 
-  <div class="container py-5">
-    <div class="card shadow-sm mx-auto" style="max-width: 600px;">
-      <div class="card-body">
-        <h1 class="card-title text-center mb-4">🤖 Smart Burme AI</h1>
+<input type="file" id="fileInput" accept="image/*">
+<button onclick="uploadFile()">Upload File</button>
 
-        <textarea id="user-input" class="form-control mb-3" rows="5" placeholder="သင့်မေးခွန်းကို ဒီမှာရေးပါ..."></textarea>
-        <button id="send-btn" class="btn btn-primary w-100 mb-3">မေးမယ်</button>
+<div id="imageResult" class="chat-bubble"></div>
 
-        <div id="response" class="p-3 border rounded bg-white" style="min-height: 120px; white-space: pre-wrap; font-size: 1rem; color: #333;">
-          AI ရဲ့ဖြေချက်တွေ ဒီမှာပြပါမယ်။
-        </div>
-      </div>
-    </div>
-  </div>
+  </div>  <div class="float3D" onclick="generateImage()"><i class="fas fa-wand-magic-sparkles"></i></div>  <div class="bottom-bar">
+    <i class="fas fa-home" onclick="alert('Home')"></i>
+    <i class="fas fa-comment" onclick="alert('Chat')"></i>
+    <i class="fas fa-image" onclick="alert('Gallery')"></i>
+    <i class="fas fa-cog" onclick="alert('Settings')"></i>
+  </div>  <script>
+    const firebaseConfig = {
+      apiKey: "AIzaSyA0kzJWoz6hbhSaJGyoPbEXAMPLE",
+      authDomain: "smartburme.firebaseapp.com",
+      databaseURL: "https://smartburme-default-rtdb.firebaseio.com",
+      projectId: "smartburme",
+      storageBucket: "smartburme.appspot.com",
+      messagingSenderId: "569049102170",
+      appId: "1:569049102170:web:1717c04f95a313c9fbc62d"
+    };
+    firebase.initializeApp(firebaseConfig);
+    const database = firebase.database();
+    const storage = firebase.storage();
 
-  <!-- Bootstrap 5 JS Bundle CDN (includes Popper) -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    async function generateImage() {
+      const text = document.getElementById("bodyText").value;
+      const genAI = new google.generativeai.GenerativeModel({
+        model: "gemini-pro-vision",
+        apiKey: "AIzaSyDzn-ZRxBxuLU__6KpWZ-EXAMPLE"
+      });
+      const result = await genAI.generateContent(text);
+      document.getElementById("imageResult").innerText = JSON.stringify(result, null, 2);
+    }
 
-  <script type="module" src="main.js"></script>
-</body>
-</html>
+    function uploadFile() {
+      const file = document.getElementById("fileInput").files[0];
+      if (!file) return alert("Please select a file first.");
+      const storageRef = storage.ref("uploads/" + file.name);
+      storageRef.put(file).then(snapshot => {
+        alert("Uploaded successfully!");
+      }).catch(error => console.error(error));
+    }
+
+    function toggleDrawer() {
+      const drawer = document.getElementById("drawer");
+      drawer.classList.toggle("open");
+    }
+  </script></body>
+  </html>
