--- a/main.html
+++ b/main.html
@@ -414,7 +414,7 @@
 
   <script>
     // Configuration
-    const GEMINI_API_KEY = "YOUR_API_KEY_HERE";
+    const GEMINI_API_KEY = "AIzaSyChZ-yBEIX_y-M8evNg1wrq85ByBAACoNU";
     
     // DOM Elements
     const photoUploadBtn = document.getElementById('photo-upload-btn');
