--- a/main.html
+++ b/main.html
@@ -414,7 +414,20 @@
 
   <script>
     // Configuration
-    const GEMINI_API_KEY = "AIzaSyChZ-yBEIX_y-M8evNg1wrq85ByBAACoNU";
+    curl "https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent?key=AIzaSyChZ-yBEIX_y-M8evNg1wrq85ByBAACoNU" \
+  -H 'Content-Type: application/json' \
+  -X POST \
+  -d '{
+    "contents": [
+      {
+        "parts": [
+          {
+            "text": "Explain how AI works in a few words"
+          }
+        ]
+      }
+    ]
+  };
     
     // DOM Elements
     const photoUploadBtn = document.getElementById('photo-upload-btn');
