--- a/main.html
+++ b/main.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Gemini Chat App</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="main.css">
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database-compat.js"></script>
 </head>
@@ -14,6 +14,6 @@
   </div>
 
   <script src="firebase-config.js"></script>
-  <script src="app.js"></script>
+  <script src="main.js"></script>
 </body>
 </html>
