--- a/main.html
+++ b/main.html
@@ -1,19 +1,45 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Gemini Chat App</title>
-  <link rel="stylesheet" href="main.css">
-  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database-compat.js"></script>
-</head>
-<body>
-  <div class="chat-container">
-    <div id="chat-box"></div>
-    <textarea id="user-input" placeholder="Type your message..."></textarea>
-    <button onclick="sendMessage()">Send</button>
-  </div>
 
-  <script src="firebase-config.js"></script>
-  <script src="main.js"></script>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Burme VPN</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          colors: {
+            'brand-gold': '#FFD700',
+            'brand-gold-dark': '#B8860B',
+            'brand-primary': '#4A90E2', // A calming blue
+            'brand-secondary': '#50E3C2', // A vibrant teal/green for connected status
+            'brand-dark-bg': '#1A202C', // Very dark blue/gray
+            'brand-light-bg': '#2D3748', // Lighter dark
+            'brand-text': '#E2E8F0', // Off-white text
+            'brand-text-muted': '#A0AEC0', // Muted text
+          },
+          animation: {
+            'pulse-fast': 'pulse 1s cubic-bezier(0.4, 0, 0.6, 1) infinite',
+          }
+        }
+      }
+    }
+  </script>
+<script type="importmap">
+{
+  "imports": {
+    "react/": "https://esm.sh/react@^19.1.0/",
+    "react": "https://esm.sh/react@^19.1.0",
+    "react-dom/": "https://esm.sh/react-dom@^19.1.0/"
+  }
+}
+</script>
+<link rel="stylesheet" href="/index.css">
+</head>
+<body class="bg-brand-dark-bg text-brand-text">
+  <div id="root"></div>
+  <script type="module" src="/index.tsx"></script>
 </body>
 </html>
