--- a/login.html
+++ b/login.html
@@ -100,7 +100,7 @@
     auth.signInWithEmailAndPassword(email, password)
       .then((userCredential) => {
         alert("Login successful!");
-        window.location.href = "burme-vpn/index.html";
+        window.location.href = "burme-ai/Mainchat.html";
       })
       .catch((error) => {
         alert("Wrong password or user not found. Redirecting to forgot page...");
